# py-job-alerts

./: .gitignore  Makefile  README.md  pyproject.toml
src/py_job_alerts/: config.py  dedup.py  filters.py  main.py  notifier.py  scraper.py  writer.py
